# amlhpc

./: .gitignore  .readthedocs.yaml  README.md  architecture.md  dask.md  data.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  python-app-3.11.yml  python-app-3.12.yml  python-app-3.13.yml  python-app-3.14.yml  python-app-3.8.yml  python-app-3.9.yml  python-app.yml
aml-slurm/: __init__.py  __main__.py  aml-slurm.py
amlhpc/: __init__.py  __main__.py  config.py  container.py  context.py  deploy.py  jobcontrol.py  sbuild.py
amlhpc/dask/: down.py  scheduler.py  worker.py
amlhpc/lsf/: bjobs.py  bsub.py
amlhpc/pbs/: qstat.py  qsub.py
amlhpc/slurm/: sacct.py  sattach.py  sbatch.py  scancel.py  sinfo.py  squeue.py  srun.py  sstat.py
amlhpc/templates/: amlhpc_simple.bicep  amlhpc_simple.json
amlslurm/: __init__.py  __main__.py
deploy/: README.md  aks.md  amlhpc_simple.bicep  amlhpc_simple.json  azuredeploy.json  azuredeploy.parameters.json  main.bicep
deploy/aks-eessi/: aml-cvmfs-pvc.yaml  aml-pod-mount-all-repos.yaml  mirror_containers_and_install_csi.sh
docs/: architecture.md  commands.md  conf.py  dask.md  data.md  examples.md  getting-started.md  index.md  requirements.txt
environments/: README.md
environments/amlhpc-ubuntu2004/: Dockerfile
environments/amlhpc-ubuntu2204/: Dockerfile
environments/amlhpc-ubuntu2204-tnav/: Dockerfile
environments/amlslurm-ubuntu2004/: Dockerfile
environments/openmpi-eessi/: Dockerfile
examples/Dask/: README.md  dask.ipynb  dask.job  pi_client.py
examples/EESSI/: readme.md
examples/FNLGMD/: README.md
examples/GROMACS/: README.md
examples/OSU/: README.md  runscript-osu-1N.sh  runscript-osu-2N.sh  runscript-osu-bw-2N.sh
examples/OpenFOAM/: readme.md
examples/QuantumESPRESSO/: README.md
examples/TensorFlow/: cifar.py  readme.md  runscript.sh
examples/VDI/: readme.md
examples/devito/: A_build_file.ipynb  B_populate_zarr_file_in_parrallel.ipynb  B_populate_zarr_file_in_parrallel.py  C_populate_file_Run.ipynb  D_radon_IO.py  E_radon_Run.ipynb  F_shot_generate.ipynb  F_shot_generate.py  G_shot_Run.ipynb  H_rtm_shot.ipynb  H_rtm_shot.py  readme.md
examples/julia/: README.md  julia.ipynb
examples/openfoamAI/: readme.md  run_jobs.sh
examples/openfoamAI/ControlSimu/: extract_model_result.py  set_up_job.py
examples/openfoamAI/ControlSimu/0/include/: .sideAndTopPatches.kate-swp  ABLConditions
examples/openfoamAI/ControlSimu/constant/: .fvModels.kate-swp  fvModels
examples/openfoamAI/ControlSimu/constant/geometry/: pc_to_stl.stl
examples/openfoamAI/ControlSimu/system/: .blockMeshDict.kate-swp  .snappyHexMeshDict.kate-swp  blockMeshDict  controlDict  decomposeParDict  fvSolution  snappyHexMeshDict  topoSetDict
examples/openfoamAI/FNO_CFD0/: FNO_fn1.py  apply_model1.py  apply_model2.py  fno_cfd0.py  plot_cfd0.py  plot_metrics.py
examples/tNavigator/: runscript.sh
scripts/: startup-task.sh
src/: __init__.py  aml-slurm-compat.py  sinfo
tests/: conftest.py  test_bsub.py  test_cancel_job.py  test_context.py  test_deploy_partition.py  test_deploy_template.py  test_doctor.py  test_listing_wrappers.py  test_main_dispatch.py  test_qsub.py  test_sacct_sstat_sattach.py  test_validate.py
