[project]
name = "amlhpc"
version = "0.2.3"
description = "Emulate Slurm/PBS/LSF HPC scheduler in Azure ML"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Hugo Meiland", email = "hugo.meiland@microsoft.com" },
]
dependencies = [
    "azure-ai-ml>=1.34.0,<2.0.0",
    "azure-identity>=1.17.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/hmeiland/amlhpc"
Issues = "https://github.com/hmeiland/amlhpc/issues"

[project.scripts]
sbatch = "amlhpc.slurm.sbatch:sbatch"
sinfo = "amlhpc.slurm.sinfo:sinfo"
squeue = "amlhpc.slurm.squeue:squeue"

[tool.poetry]
packages = [
    { include = "amlhpc" }
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
