[project]
name = "amlhpc"
version = "0.6.0"
description = "Emulate Slurm/PBS/LSF HPC scheduler in Azure ML"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Hugo Meiland", email = "hugo.meiland@microsoft.com" },
]
dependencies = [
    "azure-ai-ml>=1.34.0,<2.0.0",
    "azure-identity>=1.17.0,<2.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
    "requests>=2.33.0,<3.0.0",
    "azure-monitor-query>=1.4.0,<2.0.0",
    # Security floors for transitive dependencies (Dependabot high-severity alerts).
    # These patched releases require Python >=3.10, hence the requires-python bump above.
    "cryptography>=48.0.1",  # GHSA-537c-gmf6-5ccf (vulnerable OpenSSL in wheels)
    "urllib3>=2.7.0",        # GHSA-qccp-gfcp-xxvc, GHSA-mf9v-mfxr-j63j
]

[project.urls]
Homepage = "https://github.com/hmeiland/amlhpc"
Issues = "https://github.com/hmeiland/amlhpc/issues"

[project.scripts]
amlhpc = "amlhpc.__main__:main"
sbatch = "amlhpc.slurm.sbatch:sbatch"
srun = "amlhpc.slurm.srun:srun"
sinfo = "amlhpc.slurm.sinfo:sinfo"
squeue = "amlhpc.slurm.squeue:squeue"
scancel = "amlhpc.slurm.scancel:scancel"
sacct = "amlhpc.slurm.sacct:sacct"
sstat = "amlhpc.slurm.sstat:sstat"
sattach = "amlhpc.slurm.sattach:sattach"
qsub = "amlhpc.pbs.qsub:qsub"
qstat = "amlhpc.pbs.qstat:qstat"
qdel = "amlhpc.pbs.qstat:qdel"
bjobs = "amlhpc.lsf.bjobs:bjobs"
bkill = "amlhpc.lsf.bjobs:bkill"
bsub = "amlhpc.lsf.bsub:bsub"
container = "amlhpc.container:container"
deploy = "amlhpc.deploy:deploy"
dask-scheduler-up = "amlhpc.dask.scheduler:dask_scheduler_up"
dask-up = "amlhpc.dask.worker:dask_up"
dask-down = "amlhpc.dask.down:dask_down"

[tool.poetry]
packages = [
    { include = "amlhpc" }
]
include = [
    { path = "amlhpc/templates/*", format = ["sdist", "wheel"] }
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
